[package]
name = "gptsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
async-openai = "0.18.3"
clap = { version = "4.5.0", features = ["derive", "cargo"] }
colored = "2.1.0"
crossterm = "0.27.0"
home = "0.5.9"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
shellwords = "1.1.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.10"
use = "0.0.1-pre.0"
whoami = "1.4.1"
